# swissarmyNES

./: AGENTS.md  Cargo.toml  DESIGN.md  README.md  debug_asm.rs  fix_sfx.rs  server_log.txt
.github/workflows/: rust.yml
emulator/: Cargo.toml
emulator/src/: lib.rs
projects/MetaTest/: assets.json  project.json
projects/MyMultiFileProject/: assets.json  project.json
projects/TestProject/: assets.json  project.json
projects/TestProjectScreen/: project.json
projects/TestProject_1766332333/: main.swiss  (+1 more)
src/: lib.rs  main.rs  tests.rs
static/: index.html
tests/: animation_test.rs  array_struct_test.rs  array_test.rs  asm_comments_test.rs  assembler_test.rs  audio_compilation_test.rs  audio_dpcm_test.rs  audio_priority_test.rs  audio_test.rs  collision_test.rs  control_flow_test.rs  controller_test.rs  data_read_test.rs  data_restore_test.rs  dim_init_test.rs  e2e_hello_world.rs  e2e_test.rs  enum_test.rs  for_loop_extended_test.rs  foundation_test.rs  heap_logic_test.rs  hello_world_test.rs  macro_test.rs  math_16bit_test.rs  math_advanced_test.rs  metasprite_test.rs  nmi_safety_test.rs  poke_word_test.rs  pool_test.rs  project_files_test.rs  project_test.rs  ram_overflow_test.rs  read_string_test.rs  rng_test.rs  scroll_column_test.rs  scroll_gap_test.rs  scroll_row_test.rs  scroll_test.rs  select_test.rs  server_test.rs  (+9 more)
verification/: output.txt  test_audio.py  verify_audio.py  verify_chr.py  verify_compile.py  verify_debug.py  verify_map.py  verify_multifile.py  verify_project.py  verify_run_button.py  verify_screen_editor.py  verify_sfx.py
(+49 files in other folders)
