[package]
name = "swissarmynes"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["emulator"]

[dependencies]
axum = "0.7"
rs6502 = "0.3.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs"] }
